crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__recovery.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"fun foo(abc!) {}\"))"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    [],
                    (
                        false,
                        0..16,
                    ),
                    (
                        "fun",
                        0..3,
                    ),
                    (
                        "foo",
                        4..7,
                    ),
                    [
                        (
                            Generic(
                                (
                                    false,
                                    8..8,
                                ),
                                (
                                    "abc",
                                    8..11,
                                ),
                            ),
                            8..11,
                        ),
                        (
                            Error,
                            11..12,
                        ),
                    ],
                    None,
                    [],
                ),
                0..16,
            ),
        ],
    ),
    [
        found '"!"' at 11..12 expected '":"', or '","',
        found end of input at 11..12 expected argument,
    ],
)
