crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__shorthands-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a /= 10\").unwrap()"
---
[
    (
        Statement(
            (
                ShorthandDiv(
                    (
                        "a",
                        0..1,
                    ),
                    (
                        Number(
                            (
                                10.0,
                                5..7,
                            ),
                        ),
                        5..7,
                    ),
                ),
                0..7,
            ),
        ),
        0..7,
    ),
]
