crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__single_char.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"x\")"
---
[
    (
        Token(
            "x",
        ),
        0..1,
    ),
]
