crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__string_escapes.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\"hello\\nworld\\t\\\"quote\\\"\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "hello",
        ),
        1..6,
    ),
    (
        Token(
            "\\n",
        ),
        6..8,
    ),
    (
        Token(
            "world",
        ),
        8..13,
    ),
    (
        Token(
            "\\t",
        ),
        13..15,
    ),
    (
        Token(
            "\\\"",
        ),
        15..17,
    ),
    (
        Token(
            "quote",
        ),
        17..22,
    ),
    (
        Token(
            "\\\"",
        ),
        22..24,
    ),
    (
        Token(
            "\"",
        ),
        24..25,
    ),
]
